entpoint mejor tarjeta

--- a/TarjetasREST/bin/src/main/resources/application.properties
+++ b/TarjetasREST/bin/src/main/resources/application.properties
@@ -1,1 +1,15 @@
+spring.application.name=api-tarjetas
+server.port=${PORT:0}
 
+server.servlet.context-path=/api/vi/rest-tarjetas
+
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2
+
+spring.datasource.url=jdbc:h2:mem:tarjetas
+spring.datasource.username=sa
+spring.datasource.password=sa
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.datasource.driverClassName=org.h2.Driver
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
