--- a/TarjetasREST/src/main/resources/application.properties
+++ b/TarjetasREST/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=api-tarjetas
-server.port=${PORT:0}
+#server.port=${PORT:0}
 
 server.servlet.context-path=/api/vi/rest-tarjetas
 
