Implementacion de Eureka y mejoras

--- a/TarjetasREST/src/main/resources/application.properties
+++ b/TarjetasREST/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=api-tarjetas
-#server.port=${PORT:0}
+server.port=${PORT:0}
 
 server.servlet.context-path=/api/vi/rest-tarjetas
 
@@ -13,3 +13,6 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.driverClassName=org.h2.Driver
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
