--- a/SolicitanteREST/src/main/resources/application.properties
+++ b/SolicitanteREST/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.application.name=api-solicitante
 server.port=8002
 
 server.servlet.context-path=/api/vi/rest-solicitante
+
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
