--- a/EurekaTarjetasServer/pom.xml
+++ b/EurekaTarjetasServer/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.ibm.academia.restapi.eureka</groupId>
 	<artifactId>eurekatarjetasserver</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0</version>
 	<name>EurekaTarjetasServer</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
@@ -44,6 +44,14 @@
 			<scope>test</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-sleuth</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-sleuth-zipkin</artifactId>
+		</dependency>
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
