--- a/SolicitanteREST/src/main/resources/application.properties
+++ b/SolicitanteREST/src/main/resources/application.properties
@@ -3,4 +3,8 @@ server.port=8002
 
 server.servlet.context-path=/api/vi/rest-solicitante
 
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+#eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.client.service-url.defaultZone = http://eureka-server-tarjetas:8761/eureka
+
+spring.sleuth.sampler.probability=1.0
+spring.zipkin.base-url=http://localhost:9411 
