--- a/TarjetasREST/pom.xml
+++ b/TarjetasREST/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.ibm.academia.restapi</groupId>
 	<artifactId>tarjetasrest</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0</version>
 	<name>TarjetasREST</name>
 	<description>API de Tarjetas</description>
 	<properties>
@@ -58,6 +58,14 @@
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-sleuth</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-sleuth-zipkin</artifactId>
 		</dependency>
 	</dependencies>
 	<dependencyManagement>
