--- a/TarjetasREST/src/main/resources/application.properties
+++ b/TarjetasREST/src/main/resources/application.properties
@@ -14,5 +14,9 @@ spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.driverClassName=org.h2.Driver
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+#eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+#Para la imagen
+eureka.client.service-url.defaultZone = http://eureka-server-tarjetas:8761/eureka
 eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
+
+spring.sleuth.sampler.probability=1.0
